--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.66.1"
+    "sass": "^1.66.1",
+    "vite-plugin-checker": "^0.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -24,7 +25,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
+    "typescript": "^5.3.3",
     "vite": "^4.4.5"
   }
 }
